# in-context-order-manifolds

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: generation.yaml  models.yaml
configs/experiments/: pilot.yaml
data/pools/: entities_v1.json  event_predicates_v1.json  review_log_v1.json
scripts/: adv_confound_audit.py  adv_decode.py  analyze_geometry.py  audit_confounds.py  author_pools.py  build_entity_pool.py  deploy_knockout.py  extract_activations.py  generate_bcs.py  generate_dataset.py  link_pilot.py  probe_clincher.py  probe_interior.py  probe_nonlinear.py  probe_rank.py  run_battery.py  smoke_v100.py  steer_rank.py  verify_pipeline.py
scripts/infra/: start_vllm.sh  start_worker.sh
src/icom/: __init__.py
src/icom/battery/: __init__.py  client.py  run.py  scoring.py
src/icom/extraction/: __init__.py  hooks.py  pooling.py  run.py
src/icom/generator/: __init__.py  bcs.py  bcs_questions.py  entities.py  llm_assist.py  questions.py  schemas.py  stimuli.py
src/icom/geometry/: __init__.py  curve.py  position.py  quality.py  reliability.py  topology.py
src/icom/stats/: __init__.py  models.py
src/icom/steering/: __init__.py  intervene.py  tangent.py
src/icom/utils/: io.py  seeding.py
tests/: test_bcs.py  test_generator.py
