[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icom"
version = "0.1.0"
description = "In-context order manifolds: does an LLM build an entity-indexed manifold of a novel in-context relational structure (Balanced Comparability Sets)"
authors = [{ name = "Ilya Galyukshev", email = "galyukshev.ilya@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyyaml>=6",
    "tqdm>=4.65",
    "wordfreq>=3.0",   # real-word screen for nonce entities
]

[project.optional-dependencies]
# GPU workers are V100 (SM 7.0): cu121/cu126 wheels only (Volta is dropped from
# cu128+ builds); fp16 only, eager attention. transformers>=4.57 for OLMo-3.
gpu = [
    "torch>=2.4,<2.7",
    "transformers>=4.57",
    "accelerate>=0.30",
    "datasets>=2.19",
]
viz = ["matplotlib>=3.8", "seaborn>=0.13"]  # depth-profile / dimensionality figures
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
